--- a/Lab2OlgaTimoshenko.html
+++ b/Lab2OlgaTimoshenko.html
@@ -1,11 +1,28 @@
 <HTML>
     <head>
         <title>
-
+            Lab2
         </title>
-
     </head>
     <body>
-        
+        <header> 
+            <center><h2>Very important website</h2></center>
+        </header>
+        <main> 
+            <center> <mark>smiski figurines</mark></center>
+        </main>
+        <nav>
+            <center><a href="https://smiski.com/e/smiski/">a link to the smiski website <del>(i love them)</del></a></center>
+        </nav>
+        <footer>
+            <dl><center>
+                <dt>
+                    Created by the Japanese design company
+                </dt>
+                <dd>
+                    Dream Inc. in 2009
+                </dd></center>
+            </dl>
+        </footer>
     </body>
 </HTML>
