--- a/Lab2OlgaTimoshenko.html
+++ b/Lab2OlgaTimoshenko.html
@@ -1,5 +1,6 @@
 <HTML>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>
             Lab2
         </title>
@@ -9,7 +10,8 @@
             <center><h2>Very important website</h2></center>
         </header>
         <main> 
-            <center> <mark>smiski figurines</mark></center>
+            <center> <mark>smiski figurines</mark>
+            </center>
         </main>
         <nav>
             <center><a href="https://smiski.com/e/smiski/">a link to the smiski website <del>(i love them)</del></a></center>
