--- a/Lab2OlgaTimoshenko.html
+++ b/Lab2OlgaTimoshenko.html
@@ -10,8 +10,7 @@
             <center><h2>Very important website</h2></center>
         </header>
         <main> 
-            <center> <mark>smiski figurines</mark>
-            </center>
+            <center>smiski figurines</center>
         </main>
         <nav>
             <center><a href="https://smiski.com/e/smiski/">a link to the smiski website <del>(i love them)</del></a></center>
