--- a/Lab2OlgaTimoshenko.html
+++ b/Lab2OlgaTimoshenko.html
@@ -15,6 +15,12 @@
         <nav>
             <center><a href="https://smiski.com/e/smiski/">a link to the smiski website <del>(i love them)</del></a></center>
         </nav>
+        <div class="container">
+            <div class="item-1">series 1</div>
+            <div class="item-2">series 2</div>
+            <div class="item-3">series 3</div>
+            <div class="item-4">series 4</div>
+        </div>
         <footer>
             <dl><center>
                 <dt>
