--- a/Lab2OlgaTimoshenko.html
+++ b/Lab2OlgaTimoshenko.html
@@ -16,10 +16,10 @@
             <center><a href="https://smiski.com/e/smiski/">a link to the smiski website <del>(i love them)</del></a></center>
         </nav>
         <div class="container">
-            <div class="item-1">series 1</div>
-            <div class="item-2">series 2</div>
-            <div class="item-3">series 3</div>
-            <div class="item-4">series 4</div>
+            <div class="item-1"><a href="https://smiski.com/e/products/series-1/">series 1</a></div>
+            <div class="item-2"><a href="https://smiski.com/e/products/series-2/">series 2</a></div>
+            <div class="item-3"><a href="https://smiski.com/e/products/series-3/">series 3</a></div>
+            <div class="item-4"><a href="https://smiski.com/e/products/series-4/">series 4</a></div>
         </div>
         <footer>
             <dl><center>
