truly last additions

--- a/Lab2OlgaTimoshenko.html
+++ b/Lab2OlgaTimoshenko.html
@@ -10,7 +10,7 @@
             <center><h2>Very important website</h2></center>
         </header>
         <main> 
-            <center>smiski figurines</center>
+            <center><h3>smiski figurines</h3></center>
         </main>
         <nav>
             <center><a href="https://smiski.com/e/smiski/">a link to the smiski website <del>(i love them)</del></a></center>
